firefox layout issues with pointers style. reverting to old style

--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -461,52 +461,3 @@ min-height : 79.5%;
 			margin-top : 13%;
 		}
 }
-
-#list
-{
-    width: 100%;
-    overflow: hidden;
-    margin-bottom: -1.875em; /* 30px */
-    -webkit-column-count: 3;
-    -webkit-column-gap: 1.875em; /* 30px */
-    -webkit-column-fill: auto;
-    -moz-column-count: 3;
-    -moz-column-gap: 1.875em; /* 30px */
-    -moz-column-fill: auto;
-    column-count: 3;
-    column-gap: 1.875em; /* 30px */
-    column-fill: auto;
-}
-    .item
-    {
-        margin-bottom: 1.875em; /* 15px 30px */
-        -webkit-column-break-inside: avoid;
-        -moz-column-break-inside: avoid;
-        column-break-inside: avoid;
-    }
-
-@media only screen and ( max-width: 40em ) /* 640px */
-{
-    #list
-    {
-        -webkit-column-count: 2;
-        -webkit-column-gap: 0.938em; /* 15px */
-        -moz-column-count: 2;
-        -moz-column-gap: 0.938em; /* 15px */
-        column-count: 2;
-        column-gap: 0.938em; /* 15px */
-    }
-        .item
-        {
-            margin-bottom: 0.938em; /* 15px */
-        }
-}
-@media only screen and ( max-width: 20em ) /* 320px */
-{
-    #list
-    {
-        -webkit-column-count: auto;
-        -moz-column-count: auto;
-        column-count: auto;
-    }
-}
